Sign in button added

--- a/RutasCompartidas.Web/Views/Auth/Login.cshtml
+++ b/RutasCompartidas.Web/Views/Auth/Login.cshtml
@@ -18,3 +18,9 @@
 
     <button type="submit">Ingresar</button>
 </form>
+
+<!-- 🔹 Agregamos el botón de "Registrar nueva cuenta" -->
+<p>
+    ¿No tienes una cuenta?
+    <a asp-controller="Auth" asp-action="Registro">Regístrate aquí</a>
+</p>
