--- a/RutasCompartidas.Web/Views/Shared/_Layout.cshtml
+++ b/RutasCompartidas.Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - RutasCompartidas.Web</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/cosmo/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RutasCompartidas.Web.styles.css" asp-append-version="true" />
 </head>
@@ -42,13 +43,6 @@
         </nav>
     </header>
     <div class="container">
-
-        @if (Context.Session.GetString("UserName") != null)
-        {
-            <div class="alert alert-info text-end me-3 mt-2">
-                Bienvenido, <strong>@Context.Session.GetString("UserName")</strong>
-            </div>
-        }
 
         <main role="main" class="pb-3">
             @RenderBody()
